docs: Add Agent Cache documentation (CUS-137)
- Add new core-concepts/agent-cache.mdx page explaining cache behavior
- Document that cache is enabled by default and when to disable it
- Add cross-reference to Agent Cache in creating-tests.mdx
- Update mint.json navigation to include agent-cache page

Refs CUS-137

--- a/best-practices/creating-tests.mdx
+++ b/best-practices/creating-tests.mdx
@@ -184,7 +184,7 @@ Keep tests to 10 steps or less. If you need more steps, create a new test with a
 </Tip>
 
 <Note>
-**Performance tip:** [Agent Cache](/core-concepts/agent-cache) is enabled by default, speeding up execution and reducing costs by reusing AI reasoning from previous successful runs. Consider disabling cache when testing dynamic content, new features, or pages that change frequently - you want fresh AI decisions in those cases.
+**Performance tip:** [Agent Cache](/core-concepts/agent-cache) is enabled by default, speeding up test execution by reusing AI reasoning from previous successful runs. Consider disabling cache when debugging flaky tests or testing new features where you want fresh AI analysis.
 </Note>
 
 ### Test Dependencies
