--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -154,7 +154,7 @@ jobs:
 | `api_token` | QA.tech API token | Yes | - |
 | `test_plan_short_id` | Test plan short ID to run | No | All tests |
 | `blocking` | Wait for test results before completing | No | `false` |
-| `applications_config` | JSON with application environment overrides | No | - |
+| `applications_config` | JSON with application environment and device preset overrides | No | - |
 | `api_url` | Custom API URL | No | `https://app.qa.tech` |
 
 ### Outputs
