--- a/test-features/device-presets.mdx
+++ b/test-features/device-presets.mdx
@@ -185,11 +185,15 @@ All test runs initiated from this test plan will now use the selected device pre
 
 ### Multi-Device Testing Strategy
 
-To test the same functionality across different devices:
+To test the same functionality across different devices, you have two options:
 
+**Option 1: Separate Test Plans**
 1. Create device presets for each target device (e.g., "iPhone 14", "Galaxy Tab", "Desktop Chrome")
 2. Create separate test plans that use different device presets
 3. Run the appropriate test plan in your pipeline or schedule
+
+**Option 2: API Overrides**
+Override device presets per-run via API using the `devicePresetId` parameter in the `applications` object. This allows you to test different device configurations without creating multiple test plans. See [Start Run API](/api-reference/start-run) for details.
 
 The [GitHub App](/configuration/github-app) can automatically select device presets based on PR content - for example, testing on mobile when a PR mentions "responsive design".
 
