docs: add explanation of Production Environment toggle (CUS-281)
- Document current data collection purpose
- Mention future safety check potential

Refs CUS-281

--- a/core-concepts/applications-and-environments.mdx
+++ b/core-concepts/applications-and-environments.mdx
@@ -52,6 +52,10 @@ Use environments when you want to run the same tests against the same applicatio
 
 **Key benefit:** Tests written for an application can run on any of its environments without modification.
 
+### Production Environment Toggle
+
+When creating or editing an environment, you can mark it as a production environment using the "Production Environment" toggle. Currently, this setting is used for data collection to understand how many customers run tests against production environments. In the future, we may add additional safety checks to help prevent breaking production environments (such as avoiding overload or more intensive security testing).
+
 ## Common Patterns
 
 ### Complete Hierarchy Example
